Add db-performance module with 10-phase JPA+PostgreSQL integration tests
Phases: @Modifying UPDATE without/with index (43x speedup via Bitmap Index Scan),
INSERT without/with index, transaction overhead (1000 tx vs 1 tx), full vs partial
index (9.5x smaller, same speed), batch insert via saveAll (20x speedup), N+1
(100 SQL → 1 SQL), and slow query log demo (Hibernate SQL_SLOW + PG log_min_duration_statement).

Includes: docker-compose on port 5433, entity/repository/service, 600k-row seed via
generate_series, EXPLAIN (ANALYZE, BUFFERS) output per phase, Hibernate statistics,
and Polish-language analysis docs under db-performance/docs/.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>